[Bugfix] Fix general layout bugs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -411,6 +411,7 @@ body.hmpg {
     a {
       color: #47D2A4;
       font-weight: 700;
+      text-decoration: none;
     }
   }
   
@@ -711,7 +712,7 @@ body.hmpg {
 
   .hmpg-media {
     padding-bottom: 6rem;
-    padding-top: 28rem;
+    padding-top: 18rem;
     margin-top: -18rem;
   }
   
